* Resolve {bz: 1401}: body's line-height:1 forces clipping; changed to :normal.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10339 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -3,6 +3,10 @@
 
 /* overloads */
 
+html body {
+    line-height: normal;
+}
+
 body#blog div#controls div#controlsRight, div#st-editing-tools-edit {
     width: auto !important;
 }
